--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,8 @@
 ---
 ---
 
-@string{aps = {American Physical Society}
-@string{ieee = {Institute of Electrical and Electronics Engineers}
+@string{aps = {American Physical Society}}
+@string{ieee = {Institute of Electrical and Electronics Engineers}}
 
 @article{chen2011ecce,
   abbr={ECCE},
