--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,29 @@
 @string{ieee = {Institute of Electrical and Electronics Engineers}}
 @string{jwiley = {John Wiley}}
 
+
+@article{lee2010esscirc,
+  abbr={ESSCIRC},
+  title={A single-inductor multiple positive and negative outputs(SIMPNO) converter with a vector current control mode for electronic paper displays(EPDs)},
+  author={Lee, Y.-H. and Huang, M.-H. and Tsai, Y.-N. and Fan, M.-Y. and Chen, K.-H.},
+
+  abstract={A single-inductor multiple positive- and negative-output (SIMPNO) converter provides a compact-size and high efficiency solution for electronic paper displays (EPDs) system. With the single inductor multiple output structure, an adaptive current control methodology with the proposed vector current control mode (VCCM) can wisely minimize the current tolerance to be smaller than 10% between input and all outputs. Additionally, owing to the VCCM technique for adequate inductor current control, the cross regulation is smaller than 0.35 V/A. The test chip was fabricated by 0.25 μm BCD process with a peak value of 90% at heavy loads.},
+
+  journal={Proceedings of IEEE European Solid-State Circuits Conference},
+  volume={},
+  issue={},
+  pages={446--449},
+  numpages={},
+  year={2010},
+  month={September},
+  publisher=ieee,
+  doi={10.1109/ESSCIRC.2010.5619739},
+  url={},
+  html={https://ieeexplore.ieee.org/document/5619739},
+  pdf={example_pdf.pdf},
+  selected={true}
+}
+
 @article{huang2010sid,
   abbr={SID},
   title={A Single-Inductor Multi-Output Converter with Multi-Vector Current Control in Power-saving Driving Skill of Electronic Paper Displays (EPDs)},
@@ -20,7 +43,7 @@
   year={2010},
   month={May},
   publisher=jwiley,
-  doi={https://doi.org/10.1889/1.3500460},
+  doi={doi.org/10.1889/1.3500460},
   url={},
   html={https://sid.onlinelibrary.wiley.com/doi/abs/10.1889/1.3500460},
   pdf={example_pdf.pdf},
@@ -30,7 +53,7 @@
 @article{fan2015ecctd,
   abbr={ECCTD},
   title={Energy Harvesting Techniques: Energy Sources, Power Management and Conversion},
-  author={Fan, P.M.-Y. and Wong, O.-Y. and Chung, M.-J. and Su, T.-Y. and Zhang, X. and Chen, P.-H.},
+  author={Fan, P. M.-Y. and Wong, O.-Y. and Chung, M.-J. and Su, T.-Y. and Zhang, X. and Chen, P.-H.},
 
   abstract={Energy harvesting techniques have been developed more than a decade and received much attention in realizing long-term energy autonomous microsystems. Many converter topologies and circuit techniques have been reported to effectively convert the harvested energy to usable outputs. In this paper, major green energy sources as well as the equivalent circuits are reviewed. In addition, maximum power point tracking (MPPT) technique and power conversion topologies are also included.},
 
