--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,28 @@
 @string{ieee = {Institute of Electrical and Electronics Engineers}}
 @string{jwiley = {John Wiley}}
 
+@article{anand2021asscc,
+  abbr={ASSCC},
+  title={-17dBm Differential Charge Pump EPC Gen2 UHF RFID Demodulator for 9 dB Receive Sensitivity Boost},
+  author={*Savanth, A. and Fan, P. and Gamage, S. and Achuthan, T. and Garcia, F.},
+
+  abstract={},
+
+  journal={IEEE Asian Solid-State Circuits Conference},
+  volume={},
+  issue={},
+  pages={},
+  numpages={},
+  year={2021},
+  month={November},
+  publisher=ieee,
+  doi={},
+  url={},
+  html={},
+  pdf={example_pdf.pdf},
+  selected={true}
+}
+
 @article{chou2021vlsi,
   abbr={VLSI},
   title={A 16Kb Antifuse One-Time-Programmable Memory in 5nm High-K Metal-Gate FinFET CMOS Featuring Bootstrap High Voltage Scheme, Read Endpoint Detection and Pseudo-Differential Sensing},
